画像を投稿できるようにしました

--- a/twitter/public/css/app.css
+++ b/twitter/public/css/app.css
@@ -22380,3 +22380,8 @@ readers do not read off random characters that represent icons */
   display: inline;
   margin-left: 10px;
 }
+
+.tweet-image {
+  display: block;
+  width: 40%;
+}
