--- a/twitter/resources/sass/_main.scss
+++ b/twitter/resources/sass/_main.scss
@@ -82,3 +82,19 @@
     display: block;
     width: 40%;
 }
+
+.retweet {
+    display: inline;
+    margin-left: 10px;
+
+    &_btn {
+        display: inline-block;
+        background: none;
+        border: none;
+        color: inherit;
+        padding: 0;
+        font: inherit;
+        cursor: pointer;
+        text-decoration: none;
+    }
+}
